[gd_scene load_steps=4 format=3 uid="uid://bxbb2t1pmt5ea"]

[ext_resource type="Script" path="res://scenes/menu/character_selector_menu/char_list_item.gd" id="1_qmrt2"]
[ext_resource type="PackedScene" uid="uid://cymvq2mn58fh1" path="res://scenes/GUI_component/character/creature_tile.tscn" id="2_14g7f"]
[ext_resource type="Texture2D" uid="uid://bcbpldmllrp6f" path="res://art/GUI_components/skillBoostIcon.png" id="3_1012u"]

[node name="char_item" type="HBoxContainer"]
custom_minimum_size = Vector2(360, 150)
offset_right = 720.0
offset_bottom = 120.0
theme_override_constants/separation = 42
script = ExtResource("1_qmrt2")

[node name="portrait" parent="." instance=ExtResource("2_14g7f")]
layout_mode = 2
size_flags_vertical = 4

[node name="resumeContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 8
alignment = 1

[node name="name" type="Label" parent="resumeContainer"]
layout_mode = 2
text = "<name>"

[node name="stats" type="HBoxContainer" parent="resumeContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 26

[node name="level" type="Label" parent="resumeContainer/stats"]
layout_direction = 1
layout_mode = 2
text = "LV: <HP>
"

[node name="boost_icon" type="TextureRect" parent="resumeContainer/stats"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_1012u")
expand_mode = 2

[node name="boost" type="Label" parent="resumeContainer/stats/boost_icon"]
layout_mode = 2
offset_left = 25.0
offset_right = 71.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0.239216, 0.815686, 0.894118, 1)
text = ": <>%
"

[node name="jobs" type="HBoxContainer" parent="resumeContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 11

[node name="job1" type="Button" parent="resumeContainer/jobs"]
layout_mode = 2
mouse_filter = 2
button_mask = 0
text = "Job 1"

[node name="job2" type="Button" parent="resumeContainer/jobs"]
layout_mode = 2
mouse_filter = 2
disabled = true
button_mask = 0
text = "Job 2"

[node name="job3" type="Button" parent="resumeContainer/jobs"]
layout_mode = 2
mouse_filter = 2
disabled = true
button_mask = 0
text = "Job 3"
